tests/invalid/type_alias_attributes_not_supported.wio
@ReadOnly
type Score = i32;

fn Entry() -> i32 {
    return 0;
}
